# Resume_Generator

./: .gitignore  package.json  server.js  server.ts  tsconfig.json  user_data.json
pyppeteer_test/: index.html  test2.html
silicon_flow_generator/: .gitignore  main.py  pyproject.toml
silicon_flow_generator/database/: connection.py
silicon_flow_generator/database/entities/: prompt.py
silicon_flow_generator/db/: test.db
silicon_flow_generator/deepseek/: llm.py
silicon_flow_generator/llama_graph/: resume_generator_graph.py
silicon_flow_generator/logger/: config.py
silicon_flow_generator/logs/: objects.jsonl
silicon_flow_generator/prototypes/: fonts.html  index.html  input_1.json  inputs.py  layout_prompt.py  llm.py  logging_svc.py  main.py  one_shot_workflow.py  test.html  workflow.py
silicon_flow_generator/prototypes/http/: test-logging.http
silicon_flow_generator/prototypes/outputs/: result_20260412_093615.json  result_20260412_094940.json  result_20260412_104337.json  result_20260412_113749.json  result_20260412_115959.json  result_20260413_123826.json  result_20260414_015149.json  result_20260414_021146.json  result_20260414_123259.json
silicon_flow_generator/prototypes/prototype_1_server/: docker-compose.yaml  index.html  main.py  pyproject.toml  test.db
silicon_flow_generator/prototypes/prototype_ui/: package.json
silicon_flow_generator/prototypes/scratchpad/: layout_emoticons.txt
silicon_flow_generator/service/: prompt_svc_test.py
silicon_flow_generator/socket_app/: events.py
silicon_flow_generator/tests/: test_graph.py
(+36 files in other folders)
